cursive-bootstrap/tests/ui/E-TYP/E-TYP-2305.cursive
// RUN: compile-fail
// DIAG: E-TYP-2305
// SPEC: 8.15
// DESC: Class bound references a non-class type

record NotAClass {
    value: i32
}

procedure with_bad_bound<T: NotAClass>(x: T) -> T {  //~ ERROR E-TYP-2305: bound references non-class
    return x
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
